# scmedit

./: CMakeLists.txt  LICENSE  README.md  config.h.cmake
src/: CMakeLists.txt  channel.c  channel.h  fav.c  fav.h  map.c  map.h  scmedit.c  utf8.c  utf8.h
src/buf/: buf.h  read.c
src/cli/: buf.h  cli-mv.c  cli-print.c  cli-tab.c  cli-write.c  cli.c  cli.h  cli_s.h  mv.c  print.c  read.c  rename.c  rm.c  show.c  tab.c  write.c
src/cli/buf/: buf_s.h  read.c
